[package]
name = "pdf-zusammenfugen-cargo"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Rust-CLI und Library zum pdf zusammenfuegen, pdf verbinden und pdf mergen mit lokaler Verarbeitung."
license = "MIT"
repository = "https://github.com/wsgtcyx/PDF-Zusammenfugen-cargo"
homepage = "https://github.com/wsgtcyx/PDF-Zusammenfugen-cargo"
readme = "README.md"
keywords = ["pdf", "zusammenfuegen", "merge", "cli", "datenschutz"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
lopdf = "0.39.0"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.26.0"

[[bin]]
name = "pdf-zusammenfugen"
path = "src/main.rs"
